--- a/css/main.css
+++ b/css/main.css
@@ -2,8 +2,7 @@
 
 
 .nav{
-    background-color: #c03535;
-    color: #ffffff;
+    background-color: #caf1b8;
     border: 2px solid #000000;
     margin: 20px;
     padding: 20px;
