små endringer i rekkefølge av nettside oppsett, nå skal det være riktig

--- a/css/main.css
+++ b/css/main.css
@@ -94,5 +94,8 @@ div{
 footer{
     background-color: rgb(48, 167, 167);
     padding: 20px;
+    border-radius: 0;
+    margin: 0;
+    text-align:center;
 }
 
