--- a/css/main.css
+++ b/css/main.css
@@ -99,8 +99,9 @@ div{
     background-color: rgb(48, 167, 167);
     padding: 20px;
     border-radius: 0;
-    margin-right: 720px;
+    /**margin-right: 720px;
     margin-left:700px;
+    **/
     text-align:center;
     color:black; 
 }
